add English audio

--- a/index.html
+++ b/index.html
@@ -113,39 +113,61 @@
       <thead><th>Text</th><th class="audio-header">Ground Truth</th>
 <th class="audio-header">Base-Char</th>
 <th class="audio-header">Base-Phone</th>
-<th class="audio-header">Base-DRR</th>
-<th class="audio-header">CPR</th></thead>
-      <tbody><tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">Talib Kweli confirmed to AllHipHop that he will be releasing an album in the next year.</span></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00018.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00019.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00020.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00021.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00022.wav"></audio></td>
+<th class="audio-header">Prop-DPR</th>
+<th class="audio-header">Prop-CPR</th></thead>
+      <tbody><tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">Yet it must have been abundantly plain to the reader that the other evils existing were great and glaring. A brief summary of them will best prove this.</span></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/GT/LJ003-0221.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Base-Char/LJ003-0221.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Base-Phone/LJ003-0221.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Prop-DPR/LJ003-0221.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Prop-CPR/LJ003-0221.wav"></audio></td>
 </tr>
 
 <tr>
 </tr>
-<tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">Tajima Airport serves Toyooka.</span></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00027.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00028.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00029.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00030.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00031.wav"></audio></td>
+<tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">He was in the transport side, when one of his fellows, in endeavoring to strike another prisoner with a large poker, missed his aim, and struck Watkins' knee</span></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/GT/LJ006-0243.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Base-Char/LJ006-0243.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Base-Phone/LJ006-0243.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Prop-DPR/LJ006-0243.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Prop-CPR/LJ006-0243.wav"></audio></td>
 </tr>
 
 <tr>
 </tr>
-<tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">If you were going to space, would you be nervous?</span></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00036.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00037.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00038.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00039.wav"></audio></td>
-<td class="audio-cell"><audio controls preload="none" src="./audio/00040.wav"></audio></td>
+<tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">A committee of aldermen was forthwith appointed to report upon the inspectors' report,</span></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/GT/LJ007-0181.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Base-Char/LJ007-0181.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Base-Phone/LJ007-0181.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Prop-DPR/LJ007-0181.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Prop-CPR/LJ007-0181.wav"></audio></td>
+</tr>
+
+<tr>
+</tr>
+<tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">there were still many shocking incidents at executions, owing to the bungling and unskilful way in which the operation was performed.</span></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/GT/LJ009-0232.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Base-Char/LJ009-0232.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Base-Phone/LJ009-0232.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Prop-DPR/LJ009-0232.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Prop-CPR/LJ009-0232.wav"></audio></td>
+</tr>
+
+<tr>
+</tr>
+<tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">Another man was hired, himself a convict, whose fees for self and wife were twelve guineas.</span></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/GT/LJ009-0302.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Base-Char/LJ009-0302.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Base-Phone/LJ009-0302.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Prop-DPR/LJ009-0302.wav"></audio></td>
+<td class="audio-cell"><audio controls preload="none" src="https://cdn.jsdelivr.net/gh/ryuclc/sources@latest/audio/CPR/en/Prop-CPR/LJ009-0302.wav"></audio></td>
+</tr>
+
 <tr>
 </tr>
 </tbody>
     </table>
-    
+
 
 <a name="Spanish"><h2>2. Model comparison on Spanish</h2></a>
 <p>
@@ -154,8 +176,8 @@
       <thead><th>Text</th><th class="audio-header">Ground Truth</th>
 <th class="audio-header">Base-Char</th>
 <th class="audio-header">Base-Phone</th>
-<th class="audio-header">Base-DRR</th>
-<th class="audio-header">CPR</th></thead>
+<th class="audio-header">Prop-DPR</th>
+<th class="audio-header">Prop-CPR</th></thead>
       <tbody><tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">Talib Kweli confirmed to AllHipHop that he will be releasing an album in the next year.</span></td>
 <td class="audio-cell"><audio controls preload="none" src="./audio/00018.wav"></audio></td>
 <td class="audio-cell"><audio controls preload="none" src="./audio/00019.wav"></audio></td>
@@ -195,8 +217,8 @@
       <thead><th>Text</th><th class="audio-header">Ground Truth</th>
 <th class="audio-header">Base-Char</th>
 <th class="audio-header">Base-Phone</th>
-<th class="audio-header">Base-DRR</th>
-<th class="audio-header">CPR</th></thead>
+<th class="audio-header">Prop-DPR</th>
+<th class="audio-header">Prop-CPR</th></thead>
       <tbody><tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">Talib Kweli confirmed to AllHipHop that he will be releasing an album in the next year.</span></td>
 <td class="audio-cell"><audio controls preload="none" src="./audio/00018.wav"></audio></td>
 <td class="audio-cell"><audio controls preload="none" src="./audio/00019.wav"></audio></td>
@@ -236,8 +258,8 @@
       <thead><th>Text</th><th class="audio-header">Ground Truth</th>
 <th class="audio-header">Base-Char</th>
 <th class="audio-header">Base-Phone</th>
-<th class="audio-header">Base-DRR</th>
-<th class="audio-header">CPR</th></thead>
+<th class="audio-header">Prop-DPR</th>
+<th class="audio-header">Prop-CPR</th></thead>
       <tbody><tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">Talib Kweli confirmed to AllHipHop that he will be releasing an album in the next year.</span></td>
 <td class="audio-cell"><audio controls preload="none" src="./audio/00018.wav"></audio></td>
 <td class="audio-cell"><audio controls preload="none" src="./audio/00019.wav"></audio></td>
@@ -277,8 +299,8 @@
       <thead><th>Text</th><th class="audio-header">Ground Truth</th>
 <th class="audio-header">Base-Char</th>
 <th class="audio-header">Base-Phone</th>
-<th class="audio-header">Base-DRR</th>
-<th class="audio-header">CPR</th></thead>
+<th class="audio-header">Prop-DPR</th>
+<th class="audio-header">Prop-CPR</th></thead>
       <tbody><tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">Talib Kweli confirmed to AllHipHop that he will be releasing an album in the next year.</span></td>
 <td class="audio-cell"><audio controls preload="none" src="./audio/00018.wav"></audio></td>
 <td class="audio-cell"><audio controls preload="none" src="./audio/00019.wav"></audio></td>
@@ -318,8 +340,8 @@
       <thead><th>Text</th><th class="audio-header">Ground Truth</th>
 <th class="audio-header">Base-Char</th>
 <th class="audio-header">Base-Phone</th>
-<th class="audio-header">Base-DRR</th>
-<th class="audio-header">CPR</th></thead>
+<th class="audio-header">Prop-DPR</th>
+<th class="audio-header">Prop-CPR</th></thead>
       <tbody><tr><td class="text-cell" style="vertical-align:center"><span class="text_e2e">Talib Kweli confirmed to AllHipHop that he will be releasing an album in the next year.</span></td>
 <td class="audio-cell"><audio controls preload="none" src="./audio/00018.wav"></audio></td>
 <td class="audio-cell"><audio controls preload="none" src="./audio/00019.wav"></audio></td>
